--- a/build.properties
+++ b/build.properties
@@ -1,28 +1,33 @@
 # build.properties
-
-sf.username = amitasinghsfdc@gmail.com.prod
-sf.password = Udemy@2021
-
-sf.username1 = amitsingh@tchamit.com
-sf.password1 = hkjhshf*&(*$#jnhuj
+#
+sf.username = matturisusmitha@gmail.com
+sf.password = taasuna@16668QpdkpDUHt7gVVCmN5jO9ti
 
 # Specify the login credentials for the desired Salesforce organization
-sf.devusername = amitasinghsfdc@gmail.com.prod.dev
-sf.devpassword = Udemy@2021ufGhct6ekf6o4lMK7rEYYlDTY
+#sf.devusername = taasuna-6aka@force.com.dev
+#sf.devpassword = taasuna@16JgB0o7ys7ZC038SEopKbvpNQ
 
-sf.dev2username = amitasinghsfd@gmail.com.prod.dev2
-sf.dev2password = Udemy@2021@#
-#sf.sessionId = 
-sf.pkgName =  simple
-# <!-- <Insert comma separated package names to be retrieved> -->
+sf.devusername = matturisusmitha@gmail.com.dev
+sf.devpassword = taasuna@16txg9JAMhTdYgzye09iEB9WSt
+
+sf.dev2username = matturisusmitha@gmail.com.dev2
+sf.dev2password = taasuna@16Wd2F8tadzwKkiem9FpF7wPRsn
+
+sf.dev1username = taasuna-6aka@force.com.dev1
+sf.dev1password = taasuna@16RW701SqwOfX9UEXEkpuHAvaf
+
+
+#sf.sessionId = <Insert your Salesforce session id here.  Use this or username/password above.  Cannot use both>
+sf.pkgName = objects
+#sf.pkgName = <Insert comma separated package names to be retrieved>
 #sf.zipFile = <Insert path of the zipfile to be retrieved>
-#sf.metadataType = ApexClass
+#sf.metadataType = <Insert metadata type name for which listMetadata or bulkRetrieve operations are to be performed>
 
-# Salesforce ORG URLS 
-
+# Use 'https://login.salesforce.com' for production or developer edition (the default if not specified).
+# Use 'https://test.salesforce.com for sandbox.
 sf.produrl = https://login.salesforce.com
-sf.sandboxurl = https://test.salesforce.com
+sf.sandboxurl = https://test.salesforce.com/
 
 sf.maxPoll = 20
 # If your network requires an HTTP proxy, see http://ant.apache.org/manual/proxy.html for configuration.
-
+#
