--- a/build.xml
+++ b/build.xml
@@ -1,68 +1,80 @@
-<project name="Sample usage of Salesforce Ant tasks" default="retrieveUnpackaged" basedir="." xmlns:sf="antlib:com.salesforce">
+<project name="Sample usage of Salesforce Ant tasks" default="retrieveUnpackaged " basedir="." xmlns:sf="antlib:com.salesforce">
 
     <property file="build.properties"/>
     <property environment="env"/>
+
 
     <taskdef resource="com/salesforce/antlib.xml" uri="antlib:com.salesforce">
         <classpath>
             <pathelement location="../ant-salesforce.jar" />        	
         </classpath>
     </taskdef>
+	
+ 
 
     <!-- Retrieve an unpackaged set of metadata from your org -->
     <!-- The file unpackaged/package.xml lists what is to be retrieved -->
     <target name="retrieve">
       <mkdir dir="fetcheddata"/>
       <!-- Retrieve the contents into another directory -->
-      <sf:retrieve username="${sf.devusername}" password="${sf.devpassword}" serverurl="${sf.sandboxurl}" maxPoll="${sf.maxPoll}" retrieveTarget="fetcheddata" unpackaged="unpackaged/package.xml"/>
+      <sf:retrieve username="${sf.username}" password="${sf.password}" serverurl="${sf.produrl}" maxPoll="${sf.maxPoll}" retrieveTarget="fetcheddata" unpackaged="unpackaged/package.xml"/>
     </target>
+	    <!-- Retrieve an unpackaged set of metadata from your org -->
+    <!-- The file unpackaged/package.xml lists what is to be retrieved -->
+    <target name="retrieveChangeSet">
+      <mkdir dir="ChangeSetFolder"/>
+      <!-- Retrieve the contents into another directory -->
+      <sf:retrieve username="${sf.devusername}" password="${sf.devpassword}" serverurl="${sf.sandboxurl}" maxPoll="${sf.maxPoll}" retrieveTarget="ChangeSetFolder" packageNames="Change Set Demo"/>
+    </target>
+	
 
     <!-- Retrieve all the items of a particular metadata type -->
     <target name="bulkRetrieve">
-      <sf:bulkRetrieve username="${sf.devusername}" password="${sf.devpassword}" serverurl="${sf.sandboxurl}" maxPoll="${sf.maxPoll}" metadataType="${sf.metadataType}" retrieveTarget="retrieveUnpackaged"/>
+      <sf:bulkRetrieve username="${sf.username}" password="${sf.password}" sessionId="${sf.sessionId}" serverurl="${sf.serverurl}" maxPoll="${sf.maxPoll}" metadataType="${sf.metadataType}" retrieveTarget="retrieveUnpackaged"/>
     </target>
 
     <!-- Retrieve metadata for all the packages specified under packageNames -->
-    <target name="retrievePkg">
-	  <mkdir dir="packageContent"/>
-      <sf:retrieve username="${sf.devusername}" password="${sf.devpassword}" serverurl="${sf.sandboxurl}" maxPoll="${sf.maxPoll}" retrieveTarget="packageContent" packageNames="${sf.pkgName}"/>
-    </target>
-	
-	<target name="retrieveChangeSet">
-	  <mkdir dir="ChangeSetFolder"/>
-      <sf:retrieve username="${sf.devusername}" password="${sf.devpassword}" serverurl="${sf.sandboxurl}" maxPoll="${sf.maxPoll}" retrieveTarget="ChangeSetFolder" packageNames="ChangeSet Demo"/>
+	    <target name="retrievePkg">
+      <mkdir dir="retrieveOutput"/>
+      <!-- Retrieve the contents into another directory -->
+      <sf:retrieve username="${sf.devusername}" password="${sf.devpassword}" serverurl="${sf.sandboxurl}" maxPoll="${sf.maxPoll}" retrieveTarget="retrieveOutput" packageNames="${sf.pkgName}"/>
     </target>
 
     <!-- Deploy the unpackaged set of metadata retrieved with retrieveUnpackaged and run tests in this organization's namespace only-->
-    <target name="deploy" depends="retrieve">
-      <sf:deploy username="${sf.username}" password="${sf.password}" serverurl="${sf.produrl}" maxPoll="${sf.maxPoll}" deployRoot="fetcheddata" 
-	  checkOnly="false" testLevel="NoTestRun"
-	  rollbackOnError="true"/>
+    <target name="deploy">
+      <sf:deploy username="${sf.devusername}" password="${sf.devpassword}" serverurl="${sf.sandboxurl}" maxPoll="${sf.maxPoll}" deployRoot="fetcheddata" rollbackOnError="true"/>
     </target>
 	
-	<target name="deploy1">
+	    <!-- Deploy the unpackaged set of metadata retrieved with retrieveUnpackaged and run tests in this organization's namespace only-->
+    <target name="deployPkg">
+      <sf:deploy username="${sf.dev2username}" password="${sf.dev2password}" serverurl="${sf.sandboxurl}" maxPoll="${sf.maxPoll}" deployRoot="retrieveOutput" checkOnly="false" testLevel="RunLocalTests" rollbackOnError="true"/>
+    </target>
+	
+	    <!-- Deploy the unpackaged set of metadata retrieved with retrieveUnpackaged and run tests in this organization's namespace only-->
+    <target name="deploy1">
+      <sf:deploy username="${sf.dev2username}" password="${sf.dev2password}" serverurl="${sf.sandboxurl}" maxPoll="${sf.maxPoll}" deployRoot="fetcheddata" checkOnly="false" testLevel="RunLocalTests" rollbackOnError="true"/>
+    </target>
+	
+	
+	    <!-- Deploy the unpackaged set of metadata retrieved with retrieveUnpackaged and run tests in this organization's namespace only-->
+    <target name="deploy2" depends="retrieve, retrievePkg, retrieveChangeSet">
+      <sf:deploy username="${sf.dev2username}" password="${sf.dev2password}" serverurl="${sf.sandboxurl}" maxPoll="${sf.maxPoll}" deployRoot="fetcheddata" checkOnly="false" testLevel="RunLocalTests" rollbackOnError="true"/>
+    </target>
+	
+	
 
-      <sf:deploy username="${sf.username1}" password="${sf.password1}" serverurl="${sf.produrl}" maxPoll="${sf.maxPoll}" deployRoot="fetcheddata" 
-	  checkOnly="true" testLevel="RunLocalTests"
-	  rollbackOnError="true"/>
-    </target>
-	
-	<target name="deployPkg">
-      <sf:deploy username="${sf.username}" password="${sf.password}" serverurl="${sf.produrl}" maxPoll="${sf.maxPoll}" deployRoot="packageContent" 
-	  checkOnly="true" testLevel="RunLocalTests"
-	  rollbackOnError="true"/>
-    </target>
-	
-	<target name="deployChangeSet">
-      <sf:deploy username="${sf.username}" password="${sf.password}" serverurl="${sf.produrl}" maxPoll="${sf.maxPoll}" deployRoot="ChangeSetFolder" 
-	  checkOnly="false" testLevel="RunLocalTests"
-	  rollbackOnError="true"/>
+		
+	    <!-- Deploy the unpackaged set of metadata retrieved with retrieveUnpackaged and run tests in this organization's namespace only-->
+    <target name="deployChangeSet">
+      <sf:deploy username="${sf.dev2username}" password="${sf.dev2password}" serverurl="${sf.sandboxurl}" maxPoll="${sf.maxPoll}" deployRoot="ChangeSetFolder" checkOnly="false" testLevel="RunLocalTests" rollbackOnError="true"/>
     </target>
 
     <!-- Deploy a zip of metadata files to the org -->
     <target name="deployZip">
       <sf:deploy username="${sf.username}" password="${sf.password}" sessionId="${sf.sessionId}" serverurl="${sf.serverurl}" maxPoll="${sf.maxPoll}" zipFile="${sf.zipFile}" pollWaitMillis="1000" rollbackOnError="true"/>
     </target>
+	
+	
 
     <!-- Shows deploying code & running tests for code in directory -->
     <target name="deployCode">
@@ -84,7 +96,7 @@
 	
     <!-- Shows removing code; only succeeds if done after deployCode -->
     <target name="undeployCode">
-      <sf:deploy username="${sf.username}" password="${sf.password}" serverurl="${sf.produrl}" maxPoll="${sf.maxPoll}" deployRoot="removecodepkg"/>
+      <sf:deploy username="${sf.dev2username}" password="${sf.dev2password}" serverurl="${sf.sandboxurl}" maxPoll="${sf.maxPoll}" deployRoot="removecodepkg"/>
     </target>
 
     <!-- Shows retrieving code; only succeeds if done after deployCode -->
@@ -111,7 +123,7 @@
 	
 	<!-- Shows cancel deployment of deploy request either pending or in progress. Set property sf.requestId to Id of pending or in progress deploy request -->
 	<target name="cancelDeploy">
-	  <sf:cancelDeploy  username="${sf.username}" password="${sf.password}" serverurl="${sf.serverurl}" maxPoll="${sf.maxPoll}" requestId="${sf.requestId}"/>
+	  <sf:cancelDeploy  username="${sf.username}" password="${sf.password}" sessionId="${sf.sessionId}" serverurl="${sf.serverurl}" maxPoll="${sf.maxPoll}" requestId="${sf.requestId}"/>
 	</target>
 
 	<!-- Retrieve the information of all items of a particular metadata type -->
