--- a/build.properties
+++ b/build.properties
@@ -1,20 +1,18 @@
 # build.properties
 #
-sf.username = matturisusmitha@gmail.com
-sf.password = taasuna@16668QpdkpDUHt7gVVCmN5jO9ti
+sf.username = taasuna-kns1@force.com
+sf.password = aasuna@16FdYiO6QZ1nPBgyeqG2SMy7mQ
 
 # Specify the login credentials for the desired Salesforce organization
 #sf.devusername = taasuna-6aka@force.com.dev
 #sf.devpassword = taasuna@16JgB0o7ys7ZC038SEopKbvpNQ
 
-sf.devusername = matturisusmitha@gmail.com.dev
-sf.devpassword = taasuna@16txg9JAMhTdYgzye09iEB9WSt
+sf.devusername = taasuna-kns1@force.com.dev	
+sf.devpassword = aasuna@16YZAOe434sxwXZIuuCnQgOLq2n
 
-sf.dev2username = matturisusmitha@gmail.com.dev2
-sf.dev2password = taasuna@16Wd2F8tadzwKkiem9FpF7wPRsn
+sf.dev2username = taasuna-kns1@force.com.dev2
+sf.dev2password = aasuna@16fKaO4Jq8uKQ5Bh8nesfR1UZw
 
-sf.dev1username = taasuna-6aka@force.com.dev1
-sf.dev1password = taasuna@16RW701SqwOfX9UEXEkpuHAvaf
 
 
 #sf.sessionId = <Insert your Salesforce session id here.  Use this or username/password above.  Cannot use both>
